# shibim

./: .gitignore  Cargo.toml  LICENSE
shibim-base/: Cargo.toml  readme.md
shibim-base/src/: lib.rs
shibim-cli/: Cargo.toml  readme.md
shibim-cli/src/: main.rs
shibim-core/: Cargo.toml
shibim-core/src/: base.rs  error.rs  files.rs  html.rs  i18n.rs  lib.rs  parser.rs  toneutil.rs  util.rs
shibim-parse/: Cargo.toml  readme.md
shibim-parse/src/: lib.rs
src/: main.rs
