[package]
name = "shibim-parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.chumsky]
#using ahash adds a lot more dependencies
version = "0.8.0"
default-features = false # do not include the default features, and optionally
                         # cherry-pick individual features

[dependencies.shibim-base]
path = "../shibim-base"
version = "0.1.0"